Changelog
=========

2.10.1 (unreleased)
-------------------

- Nothing changed yet.


2.10.0 (2012-09-07)
-------------------

- Added piwik
  [reinhardt]

- Add support for zeitschriften not to display all issues and reviews
  immediately, but after clicking.
  [reinhardt]

2.9.4 (2013-01-30)
------------------

- Backported piwik from reinhardt. Finally
  [do3cc]


2.9.3 (2013-01-30)
------------------

- Nothing changed yet.


2.9.2.1 (2013-01-23)
--------------------

- Nothing changed yet.


2.9.2 (2013-01-23)
------------------

- Nothing changed yet.


2.9.1.2 (2012-11-06)
--------------------

- Nothing changed yet.


2.9.1 (2012-08-30)
------------------

- Nothing changed yet.


2.9.0.2 (2012-08-09)
--------------------

- Startpage now shows Volumes properly.
  [gerken]


2.9.0.1 (2012-07-22)
--------------------

- Adding missing changes of reviewpage
  [gerken]


2.9.0 (2012-07-22)
------------------

- Improved caching of authorsearch, iow it works again
  [gerken]
- Improved caching of reviewpage
  [gerken]


2.8 (2012-06-19)
----------------

- Fixing caching issues. See #5276
  [gerken]


2.7 (2012-06-15)
----------------

- Handle title subtitle case. See #4022
  [gerken]


2.6 (2012-05-10)
----------------

- Bugfix, error in homepage.py reverting to version from 2.3 [deroiste]


2.5 (2012-05-06)
----------------

- Bugfix, error in homepage.py [deroiste]


2.4 (2012-05-05)
----------------

- Added the current date to the homepage cachekey #4384 [deroiste]


2.3 (2012-03-04)
----------------

- Nothing changed yet.


2.2 (2012-02-08)
----------------

- Nothing changed yet.


2.1.5 (2012-01-18)
------------------

- redirect-to-publication: redirects from an Issue or Volume to the
  relevant part of the Publication listing page #3985 [deroiste]
- Schlagwort-Import aus OPAC klappt nicht mehr #4107 [pilz]
- Fixup punctuation in search and topic browsing result titles #4040
  [deroiste]


2.1.4 (2011-12-22)
------------------
